# gamedev-starter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: test.frag.glsl  test.vert.glsl  tiles.frag  tiles.vert
examples/: CMakeLists.txt  basic.cpp  bitmap_font.cpp  collision.cpp  drawing.cpp  dungeon.cpp  imgui.cpp  input.cpp  random.cpp  stencil_buffer.cpp  texture.cpp
src/: dungeon_tiles.h  game.cpp  game.h  level.cpp  level.h  main.cpp  tilemap.cpp  tilemap.h
tools/: dump_texture.cpp  dumptex.cpp  level_editor.cpp
